# AI-Researcher

./: .env  .env.template  .gitignore  DOCKER_README.md  Dockerfile.web  README.md  README_tjb.md  convert_requirements_to_pyproject.py  docker-compose.yml  fast_commit.ps1  global_state.py  main_ai_researcher.py  pyproject.toml  requirements.txt  setup.cfg  start_docker.bat  start_docker.sh  web_ai_researcher.py
benchmark/: README.md
benchmark/final/diffu_flow/: con_flowmatching.json  i_rect_flow.json  immiscible_diffusion.json  mmdit.json
benchmark/final/gnn/: allinone.json  exphormer.json  gnn_difformer.json  gnn_fractional.json  gnn_generalization.json  gnn_nodeformer.json  gnn_poly_gcl.json  gnn_universal.json  graphgpt.json
benchmark/final/reasoning/: analog_reasoner.json  self_discover.json
benchmark/final/recommendation/: categorical_rec.json  dccf.json  hgcl.json  kgrec.json  maerec.json  mhcl.json
benchmark/final/vq/: auto_wovq.json  distangle_vq.json  fsq.json  one_layer_vq.json  res_vq_implict.json  rotation_vq.json
benchmark_collection/: 0_crawl_paper.py  1_create_inno_graph.py  merged_papers_with_fields.json  papers_to_search  readme.md
benchmark_collection/innovation_graph/: innovation_graph.json  innovation_graph_final.json
benchmark_collection/innovation_graph/checkpoints/: processed_papers.json
benchmark_collection/paper_titles/: paper_titles.json  search_progress.json  venue_cache.json
benchmark_collection/paper_titles/pdfs/: Heterogeneous Graph Contrastive Learning for Recommendation.md
benchmark_collection/prompts/: anonymize_target_paper_extract_model_name.md  anonymize_target_paper_instruction.md  create_innovation_graph_instruction_overall.md  create_innovation_graph_instruction_step1.md  create_innovation_graph_instruction_step2.md  create_innovation_graph_instruction_step3.md  create_innovation_graph_instruction_step4.md  create_innovation_graph_instruction_step5.md  create_innovation_task_instruction_task1.md  create_innovation_task_instruction_task2.md
benchmark_collection/utils/: openai_utils.py  pdf_utils.py
docker/: Dockerfile  requirements.txt  supervisord.conf  tcp_server.py
examples/: trans_fig.py  trans_pdf.py  trans_pdf_to_twitter_video.py  trans_pdf_to_video.py
examples/con_flowmatching/: paper.avi
examples/con_flowmatching/project/: requirements.txt  run_comprehensive_experiments.py  run_training_testing.py  run_training_testing_v2.py
examples/dccf/project/: README.md  check_data.py  run_model_revision.py  run_training_testing.py  run_training_testing_refined.py
examples/fsq/project/: regularized_training_history.json  run_adaptive_quantization.py  run_benchmark.py  run_regularized_training.py  (+6 more)
paper_agent/: .env  abstract_composing.py  conclusion_composing.py  experiments_composing.py  introduction_composing.py  methodology_composing_using_template.py  related_work_composing_using_template.py  run_paper.sh  section_composer.py  tex_writer.py  tex_writer_ori.py  writing.py  writing_fix.py
paper_agent/final_paper/: iclr2025_conference.bib  iclr2025_conference.tex
research_agent/: .env.template  .gitignore  constant.py  run_infer_idea.py  run_infer_level_1.sh  run_infer_level_2.sh  run_infer_plan.py
research_agent/inno/: __init__.py  cli.py  core.py  fn_call_converter.py  io_utils.py  logger.py  main.py  registry.py  tcp_server.py  types.py  util.py
(+1133 files in other folders)
