[metadata]
name = ai-researcher
version = 0.2.0
author = HKUDS
description = Fully-Automated scientific discovery agent framework
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
package_dir =
    = .
packages = find_namespace:
zip_safe = True
include_package_data = True
install_requires =
    numpy
    openai>=1.52.0
    pytest
    requests
    tqdm
    pre-commit
    instructor
    litellm==1.55.0
    beautifulsoup4
    browsergym==0.13.0
    chromadb
    click
    datasets
    docling
    filelock
    Flask
    gymnasium
    html2text
    httpx
    huggingface_hub
    inquirer
    loguru
    mammoth
    markdownify
    matplotlib
    networkx
    pandas
    pathvalidate==3.2.1
    pdfminer.six
    Pillow
    playwright==1.39.0
    prompt_toolkit
    psutil
    puremagic
    pydantic
    pydub
    python_pptx
    PyYAML
    rich
    SpeechRecognition
    tenacity
    termcolor
    tiktoken
    tree_sitter==0.23.1
    uvicorn
    youtube_transcript_api
    moviepy
    faster_whisper
    sentence_transformers
    gradio
    arxiv


[options.packages.find]
where = .
include = research_agent*, paper_agent*, benchmark_collection*
    
python_requires = >=3.11

[options.entry_points]
console_scripts =
    ai-researcher = research_agent.cli:cli
    paper-agent = paper_agent.cli:cli
    benchmark = benchmark_collection.cli:cli

[tool.autopep8]
max_line_length = 120
ignore = E501,W6
in-place = true
recursive = true
aggressive = 3